// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Anchor.vue > snapshot 1`] = `
"<div class="el-anchor el-anchor--vertical">
  <div class="el-anchor__header">
    <!--v-if--><button type="button" class="el-anchor__collapse-btn"></button>
  </div>
  <div class="el-anchor__body">
    <!--v-if-->
    <div class="el-anchor__list">
      <div class="el-anchor__item">
        <div class="el-anchor__link-row"><a class="el-anchor__link el-tooltip__trigger el-tooltip__trigger" href="#anchor-link-0">#anchor-link-0</a>
          <!--teleport start-->
          <!--teleport end-->
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`Anchor.vue > snapshot 2`] = `
"<div class="el-anchor el-anchor--horizontal">
  <div class="el-anchor__header">
    <!--v-if--><button type="button" class="el-anchor__collapse-btn"></button>
  </div>
  <div class="el-anchor__body">
    <!--v-if-->
    <div class="el-anchor__list">
      <div class="el-anchor__item">
        <div class="el-anchor__link-row"><a class="el-anchor__link el-tooltip__trigger el-tooltip__trigger" href="#anchor-link-0">#anchor-link-0</a>
          <!--teleport start-->
          <!--teleport end-->
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`Anchor.vue > snapshot 3`] = `
"<div class="el-anchor el-anchor--underline el-anchor--vertical">
  <div class="el-anchor__header">
    <!--v-if--><button type="button" class="el-anchor__collapse-btn"></button>
  </div>
  <div class="el-anchor__body">
    <!--v-if-->
    <div class="el-anchor__list">
      <div class="el-anchor__item">
        <div class="el-anchor__link-row"><a class="el-anchor__link el-tooltip__trigger el-tooltip__trigger" href="#anchor-link-0">#anchor-link-0</a>
          <!--teleport start-->
          <!--teleport end-->
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`Anchor.vue > snapshot 4`] = `
"<div class="el-anchor el-anchor--underline el-anchor--horizontal">
  <div class="el-anchor__header">
    <!--v-if--><button type="button" class="el-anchor__collapse-btn"></button>
  </div>
  <div class="el-anchor__body">
    <!--v-if-->
    <div class="el-anchor__list">
      <div class="el-anchor__item">
        <div class="el-anchor__link-row"><a class="el-anchor__link el-tooltip__trigger el-tooltip__trigger" href="#anchor-link-0">#anchor-link-0</a>
          <!--teleport start-->
          <!--teleport end-->
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;
